--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-	<title>Satner Portfolio</title>
+	<title>Allan Portfolio</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" href="{% static 'vendors/linericon/style.css' %}">
@@ -37,10 +37,10 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-end">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+							<li class="nav-item active"><a class="nav-link" href="index.html">Ínicio</a></li>
+							<li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+							<li class="nav-item"><a class="nav-link" href="services.html">Serviços</a></li>
+							<li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
 						</ul>
 					</div>
 				</div>
@@ -56,12 +56,12 @@
 				<div class="row">
 					<div class="col-lg-7">
 						<div class="banner_content">
-							<h3 class="text-uppercase">Hell0</h3>
-							<h1 class="text-uppercase">I am rahi satner</h1>
-							<h5 class="text-uppercase">senior wordpress developer</h5>
+							<h3 class="text-uppercase">Olá</h3>
+							<h1 class="text-uppercase">Eu sou Allan</h1>
+							<h5 class="text-uppercase">Desenvolvedor Python para WEB</h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="#"><span>Hire Me</span></a>
-								<a class="primary_btn tr-bg" href="#"><span>Get CV</span></a>
+								<a class="primary_btn" href="#"><span>Me Contrate</span></a>
+								<a class="primary_btn tr-bg" href="#"><span>Meu currículo</span></a>
 							</div>
 						</div>
 					</div>
@@ -88,19 +88,16 @@
 
 				<div class="offset-lg-1 col-lg-5">
 					<div class="main_title text-left">
-						<h2>let’s <br>
-							Introduce about <br>
-							myself</h2>
+						<h2>Vou <br>
+							falar um pouco <br>
+							sobre mim</h2>
 						<p>
-							Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
-							midst their. Beast creepeth. Fish days.
+							*-*-*-*- EM DESENVOLVIMENTO -*-*-*-*-*-*-*
 						</p>
 						<p>
-							Is give may shall likeness made yielding spirit a itself together created after sea 
-							is in beast beginning signs open god you're gathering whose gathered cattle let. 
-							Creature whales fruit unto meat the life beginning all in under give two.
+							-*-*-*-*- EM DESENVOLVIMENTO *-*-*-*-*-
 						</p>
-						<a class="primary_btn" href="#"><span>Download CV</span></a>
+						<a class="primary_btn" href="#"><span>Baixar Currículo</span></a>
 					</div>
 				</div>
 			</div>
@@ -182,16 +179,16 @@
 				<div class="offset-lg-2 col-lg-4 col-md-6">
 					<div class="client-info">
 						<div class="d-flex mb-50">
-							<span class="lage">10</span>
-							<span class="smll">Years Experience Working</span>
+							<span class="lage">2</span>
+							<span class="smll">Anos de experiência com python e django</span>
 						</div>
 						<div class="call-now d-flex">
 							<div>
 								<span class="fa fa-phone"></span>
 							</div>
 							<div class="ml-15">
-								<p>call us now</p>
-								<h3>(+1)-800-555-6789</h3>
+								<p>Ligar agora</p>
+								<h3>(61) 9 **** 4857</h3>
 							</div>
 						</div>
 					</div>
@@ -207,10 +204,10 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>service offers </h2>
+						<h2>Ofertas de serviços </h2>
 						<p>
-							Is give may shall likeness made yielding spirit a itself togeth created 
-							after sea <br> is in beast beginning signs open god you're gathering ithe
+							Em desenvolvimento
+							<br> Em elaboração
 						</p>
 					</div>
 				</div>
@@ -219,29 +216,29 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="{% static 'img/services/s1.png' %}" alt="">
-						<h4>Wp developing</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>Desenvolvedor Web</h4>
+						<p>Informações sobre desenvolvimento web</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="{% static 'img/services/s2.png' %}" alt="">
-						<h4>UI/ux design</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>Designer</h4>
+						<p>Informações sobre design</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="{% static 'img/services/s3.png' %}" alt="">
-						<h4>Web design</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>Web Designer</h4>
+						<p>Informações sobre webdesigner</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="{% static 'img/services/s4.png' %}" alt="">
-						<h4>seo optimize</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>segurança</h4>
+						<p>informação sobre peformance, segurança,etc</p>
 					</div>
 				</div>
 			</div>
@@ -255,8 +252,8 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="main_title text-left">
-						<h2>quality work <br>
-							Recently done project </h2>
+						<h2>trabalhos de qualidade <br>
+							projetos recentes </h2>
 					</div>
 				</div>
 			</div>
@@ -284,7 +281,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="{% static 'portfolio-details.html' %}">minimal design</a></h4>
+								<h4><a href="{% static 'portfolio-details.html' %}">logo</a></h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -301,7 +298,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Paint wall</a></h4>
+								<h4><a href="portfolio-details.html">banners</a></h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -318,7 +315,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">female light</a></h4>
+								<h4><a href="portfolio-details.html">templates</a></h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -335,7 +332,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">fourth air</a></h4>
+								<h4><a href="portfolio-details.html">titulo</a></h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -352,7 +349,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">together sign</a></h4>
+								<h4><a href="portfolio-details.html">titulo</a></h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -369,7 +366,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">multiply fowl</a></h4>
+								<h4><a href="portfolio-details.html">titulo</a></h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -386,7 +383,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">green heaven</a></h4>
+								<h4><a href="portfolio-details.html">titulo</a></h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -403,7 +400,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4>fly male</h4>
+								<h4>titulo</h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -420,7 +417,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">season face</a></h4>
+								<h4><a href="portfolio-details.html">titulo</a></h4>
 								<p>Animated, portfolio</p>
 							</div>
 						</div>
@@ -437,9 +434,9 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>client say about me</h2>
-						<p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast <br>
-							 beginning signs open god you're gathering ithe</p>
+						<h2>Depoimentos</h2>
+						<p>este espaço será para depoimentos <br>
+							 e agradecimentos de todos clientes</p>
 					</div>
 				</div>
 			</div>
@@ -453,7 +450,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>agradecimento </p>
         						</div>
         					</div>
         				</div>
@@ -466,7 +463,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>agradecimento </p>
         						</div>
         					</div>
         				</div>
@@ -479,7 +476,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>agradecimento</p>
         						</div>
         					</div>
         				</div>
@@ -492,7 +489,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>agradecimento </p>
         						</div>
         					</div>
         				</div>
@@ -505,7 +502,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>agradecimento </p>
         						</div>
         					</div>
         				</div>
@@ -518,7 +515,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>agradecimento </p>
         						</div>
         					</div>
         				</div>
@@ -535,9 +532,9 @@
 			<div class="row justify-content-center align-items-center">
 				<div class="col-lg-12">
 					<div class="subscription_box text-center">
-						<h2 class="text-uppercase text-white">get update from anywhere</h2>
+						<h2 class="text-uppercase text-white">Fique atualizado de onde estiver</h2>
 						<p class="text-white">
-							Bearing Void gathering light light his eavening unto dont afraid. 
+							***Em Construção
 						</p>
 						<div class="subcribe-form" id="mc_embed_signup">
 							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
@@ -566,7 +563,7 @@
 							<a href="#">
 								<img src="{% static 'img/logo.png' %}" alt="">
 							</a>
-							<h4>Follow Me</h4>
+							<h4>Me siga nas redes sociais</h4>
 						</div>
 						<div class="footer_social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
