pequenas alterações na pagina sobre

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="icon" href="{% static '' %}img/favicon.png" type="image/png">
+	<link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
 	<title>About Us</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
@@ -61,8 +61,8 @@
                 <div class="banner_content text-center">
                     <h2>About Us</h2>
                     <div class="page_link">
-                        <a href="index.html">Home</a>
-                        <a href="about.html">About</a>
+                        <a href="index.html">Inicio</a>
+                        <a href="about.html">Sobre</a>
                     </div>
                 </div>
             </div>
@@ -82,19 +82,16 @@
 
                 <div class="offset-lg-1 col-lg-5">
                     <div class="main_title text-left">
-                        <h2>let’s <br>
-                            Introduce about <br>
-                            myself</h2>
+                        <h2>Vou  <br>
+                            Falar um pouco <br>
+                            Sobre mim</h2>
                         <p>
-                            Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
-                            midst their. Beast creepeth. Fish days.
+                            Em desenvolvimento
                         </p>
                         <p>
-                            Is give may shall likeness made yielding spirit a itself together created after sea 
-                            is in beast beginning signs open god you're gathering whose gathered cattle let. 
-                            Creature whales fruit unto meat the life beginning all in under give two.
+                            Em desenvolvimento
                         </p>
-                        <a class="primary_btn" href="#"><span>Download CV</span></a>
+                        <a class="primary_btn" href="#"><span>Baixe meu curriculo</span></a>
                     </div>
                 </div>
             </div>
@@ -176,16 +173,16 @@
                 <div class="offset-lg-2 col-lg-4 col-md-6">
                     <div class="client-info">
                         <div class="d-flex mb-50">
-                            <span class="lage">10</span>
-                            <span class="smll">Years Experience Working</span>
+                            <span class="lage">2</span>
+                            <span class="smll">Anos de experiência</span>
                         </div>
                         <div class="call-now d-flex">
                             <div>
                                 <span class="fa fa-phone"></span>
                             </div>
                             <div class="ml-15">
-                                <p>call us now</p>
-                                <h3>(+1)-800-555-6789</h3>
+                                <p>Me ligue agora</p>
+                                <h3>(61) ****4857</h3>
                             </div>
                         </div>
                     </div>
@@ -201,9 +198,9 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <div class="main_title">
-                        <h2>client say about me</h2>
-                        <p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast <br>
-                                beginning signs open god you're gathering ithe</p>
+                        <h2>Depoimentos</h2>
+                        <p>aqui vai ser o espaço <br>
+                                que mostrara os depoimentos</p>
                     </div>
                 </div>
             </div>
@@ -217,7 +214,7 @@
                             <div class="col-lg-8">
                                 <div class="testi_text">
                                     <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+                                    <p>bla bla bla </p>
                                 </div>
                             </div>
                         </div>
@@ -230,7 +227,7 @@
                             <div class="col-lg-8">
                                 <div class="testi_text">
                                     <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+                                    <p>bla bla bla </p>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +240,7 @@
                             <div class="col-lg-8">
                                 <div class="testi_text">
                                     <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+                                    <p>Hbla bla bla</p>
                                 </div>
                             </div>
                         </div>
