atualização de todas as páginas

--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
 								<span class="fa fa-phone"></span>
 							</div>
 							<div class="ml-15">
-								<p>Ligar agora</p>
+								<p>Me ligue agora</p>
 								<h3>(61) 9 **** 4857</h3>
 							</div>
 						</div>
