Formulário atualizado, porém falta alguns ajustes

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<a class="navbar-brand logo_h" href="index.html"><img src="{% static 'img/logo.png' %}" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -94,10 +94,10 @@
 							falar um pouco <br>
 							sobre mim</h2>
 						<p>
-							*-*-*-*- EM DESENVOLVIMENTO -*-*-*-*-*-*-*
+							 EM
 						</p>
 						<p>
-							-*-*-*-*- EM DESENVOLVIMENTO *-*-*-*-*-
+							DESENVOLVIMENTO
 						</p>
 						<a class="primary_btn" href="#"><span>Baixar Currículo</span></a>
 					</div>
@@ -248,7 +248,7 @@
 	</section>
 	<!--================ End Features Area =================-->
 
-	<!--================Start Portfolio Area =================-->
+	<!--================Start Portfolio Area =================
 	<section class="portfolio_area" id="portfolio">
 		<div class="container">
 			<div class="row">
@@ -427,7 +427,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<!--================End Portfolio Area =================-->
 
 	<!--================ Start Testimonial Area =================-->
@@ -529,7 +529,7 @@
 	<!--================ End Testimonial Area =================-->
 
 	<!--================ Start Newsletter Area =================-->
-	<section class="newsletter_area">
+	<!-- <section class="newsletter_area">
 		<div class="container">
 			<div class="row justify-content-center align-items-center">
 				<div class="col-lg-12">
@@ -552,7 +552,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!--================ End Newsletter Area =================-->
 
 	<!--================Footer Area =================-->
@@ -599,8 +599,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="{% static 'vendors/owl-carousel/owl.carousel.min.js' %}"></script>
 	<script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
 	<script src="{% static 'js/mail-script.js' %}"></script>
-	<!--gmaps Js-->
-	<script src="{% static 'https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE' %}"></script>
+	<!--gmaps Js
+	<script src="{% static 'https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE' %}"></script>-->
 	<script src="{% static 'js/gmaps.min.js' %}"></script>
 	<script src="{% static 'js/theme.js' %}"></script>
 </body>
