--- a/templates/services.html
+++ b/templates/services.html
@@ -28,7 +28,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<a class="navbar-brand logo_h" href="index.html"><img src="{% static 'img/logo.png' %}" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -214,7 +214,7 @@
     <!--================ End Testimonial Area =================-->
     
     <!--================ Start Newsletter Area =================-->
-    <section class="newsletter_area">
+    <!-- <section class="newsletter_area">
 		<div class="container">
 			<div class="row justify-content-center align-items-center">
 				<div class="col-lg-12">
@@ -237,7 +237,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
     <!--================ End Newsletter Area =================-->
         
         <!--================Footer Area =================-->
