--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
+{% load bootstrap4 %}
 {% load static %}
 <!doctype html>
 <html lang="en">
@@ -28,7 +29,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<a class="navbar-brand logo_h" href="index.html"><img src="{% static 'img/logo.png' %}" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -94,7 +95,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-9">
+                <div class="container">
+					{% bootstrap_messages %}
+					<form action="{% url 'contact' %}" method="post" class="form" id="form1" autocomplete="off">
+						{% csrf_token %}
+						{% bootstrap_form form %}
+						{% buttons %}
+							<button type="submit" class="btn-primary">Enviar</button>
+						{% endbuttons %}
+       				 </form>
+				</div>
+					<!--
                     <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -118,6 +129,7 @@
                             </button>
                         </div>
                     </form>
+                    -->
                 </div>
             </div>
             <div id="mapBox" class="mapBox" 
