--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-	<title>About Us</title>
+	<title>Sobre nós</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" href="{% static 'vendors/linericon/style.css' %}">
@@ -37,10 +37,10 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-end">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Ínicio</a></li>
-							<li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
-							<li class="nav-item"><a class="nav-link" href="services.html">Serviços</a></li>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+							<li class="nav-item active"><a class="nav-link" href="{% url 'portapp:index' %}">Ínicio</a></li>
+						<!--	<li class="nav-item"><a class="nav-link" href="about">Sobre</a></li> -->
+							<li class="nav-item"><a class="nav-link" href="services">Serviços</a></li>
+							<li class="nav-item"><a class="nav-link" href="contact">Contato</a></li>
 						</ul>
 					</div>
 				</div>
