--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,10 +39,10 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-end">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Ínicio</a></li>
-							<li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
-							<li class="nav-item"><a class="nav-link" href="services.html">Serviços</a></li>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+							<li class="nav-item active"><a class="nav-link" href="{% url 'portapp:index' %}">Ínicio</a></li>
+							<li class="nav-item"><a class="nav-link" href="about">Sobre</a></li>
+							<li class="nav-item"><a class="nav-link" href="services">Serviços</a></li>
+						<!--	<li class="nav-item"><a class="nav-link" href="contact">Contato</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="container">
 					{% bootstrap_messages %}
-					<form action="{% url 'contact' %}" method="post" class="form" id="form1" autocomplete="off">
+					<form action="{% url 'portapp:contact' %}" method="post" class="form" id="form1" autocomplete="off">
 						{% csrf_token %}
 						{% bootstrap_form form %}
 						{% buttons %}
