--- a/templates/about.html
+++ b/templates/about.html
@@ -61,8 +61,8 @@
                 <div class="banner_content text-center">
                     <h2>Sobre nós</h2>
                     <div class="page_link">
-                        <a href="index.html">Inicio</a>
-                        <a href="about.html">Sobre</a>
+                       <!--  <a href="index.html">Inicio</a>
+                        <a href="about.html">Sobre</a> -->
                     </div>
                 </div>
             </div>
