--- a/templates/contact.html
+++ b/templates/contact.html
@@ -63,8 +63,8 @@
                 <div class="banner_content text-center">
                     <h2>Contato</h2>
                     <div class="page_link">
-                        <a href="index.html">Inicio</a>
-                        <a href="about.html">Sobre</a>
+                          <!--  <a href="index.html">Inicio</a>
+                        <a href="about.html">Sobre</a> -->
                     </div>
                 </div>
             </div>
