--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="{% static 'img/logo.png' %}" alt=""></a>
+					<a class="navbar-brand logo_h" href="{% url 'portapp:index' %}"><img src="{% static 'img/logo.png' %}" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -118,63 +118,63 @@
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo1.png' %}" alt="">
+									<img src="{% static 'img/brands/python.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo2.png' %}" alt="">
+									<img src="{% static 'img/brands/django.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo3.png' %}" alt="">
+									<img src="{% static 'img/brands/mysql.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo4.png' %}" alt="">
+									<img src="{% static 'img/brands/sqlite.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo5.png' %}" alt="">
+									<img src="{% static 'img/brands/git.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo6.png' %}" alt="">
+									<img src="{% static 'img/brands/heroku.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo7.png' %}" alt="">
+									<img src="{% static 'img/brands/logo7' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo8.png' %}" alt="">
+									<img src="{% static 'img/brands/logo8' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo9.png' %}" alt="">
+									<img src="{% static 'img/brands/logo9' %}" alt="">
 								</div>
 							</div>
 						</div>
@@ -183,7 +183,7 @@
 				<div class="offset-lg-2 col-lg-4 col-md-6">
 					<div class="client-info">
 						<div class="d-flex mb-50">
-							<span class="lage">2</span>
+							<span class="lage">0</span>
 							<span class="smll">Anos de experiência com python e django</span>
 						</div>
 						<div class="call-now d-flex">
@@ -438,9 +438,8 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>Depoimentos</h2>
-						<p>este espaço será para depoimentos <br>
-							 e agradecimentos de todos clientes</p>
+						<h2>Certificado e Certificações</h2>
+						<p>este espaço será apresentando minhas habilidades adquiridas através de cursos</p>
 					</div>
 				</div>
 			</div>
@@ -449,12 +448,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t1.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/img' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
-									<p>agradecimento </p>
+        							<h4>Django</h4>
+									<p> Certificado Udemy - Djando do básico ao avançado </p>
         						</div>
         					</div>
         				</div>
@@ -462,12 +461,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t2.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
-									<p>agradecimento </p>
+        							<h4>Python</h4>
+									<p> Curso em vídeo - Python fundamentos </p>
         						</div>
         					</div>
         				</div>
@@ -475,12 +474,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t1.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/mysql.jpeg' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
-									<p>agradecimento</p>
+        							<h4>Banco de Dados</h4>
+									<p>Certificado Curso em Vídeo - MySQL</p>
         						</div>
         					</div>
         				</div>
@@ -488,12 +487,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t2.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
-									<p>agradecimento </p>
+        							<h4>Python</h4>
+									<p>Udemy - Python Tutorials for Beginners to Expert </p>
         						</div>
         					</div>
         				</div>
@@ -501,12 +500,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t1.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
-									<p>agradecimento </p>
+        							<h4>Scrum Foundation</h4>
+									<p>CertiProf - Professional  Certificate </p>
         						</div>
         					</div>
         				</div>
@@ -514,12 +513,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t2.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
-									<p>agradecimento </p>
+        							<h4>Django Rest</h4>
+									<p>Udemy - Criando poderosas API's RESTful com Django Rest Framework</p>
         						</div>
         					</div>
         				</div>
