icons git & Linkdin

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-	<title>Sobre nós</title>
+	<title>Sobre mim</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link rel="stylesheet" href="{% static 'vendors/linericon/style.css' %}">
@@ -59,7 +59,7 @@
         <div class="banner_inner d-flex align-items-center">
             <div class="container">
                 <div class="banner_content text-center">
-                    <h2>Sobre nós</h2>
+                    <h2>Sobre mim</h2>
                     <div class="page_link">
                        <!--  <a href="index.html">Inicio</a>
                         <a href="about.html">Sobre</a> -->
@@ -76,7 +76,7 @@
             <div class="row justify-content-start align-items-center">
                 <div class="col-lg-5">
                     <div class="about_img">
-                        <img class="" src="img/about-us.png" alt="">
+                        <img class="" src="{% static 'img/about-us.png' %}" alt="">
                     </div>
                 </div>
 
@@ -108,63 +108,63 @@
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo1.png' %}" alt="">
+									<img src="{% static 'img/brands/python.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo2.png' %}" alt="">
+									<img src="{% static 'img/brands/django.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo3.png' %}" alt="">
+									<img src="{% static 'img/brands/mysql.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo4.png' %}" alt="">
+									<img src="{% static 'img/brands/sqlite.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo5.png' %}" alt="">
+									<img src="{% static 'img/brands/git.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo6.png' %}" alt="">
+									<img src="{% static 'img/brands/heroku.png' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo7.png' %}" alt="">
+									<img src="{% static 'img/brands/logo7' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo8.png' %}" alt="">
+									<img src="{% static 'img/brands/logo8' %}" alt="">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="{% static 'img/brands/logo9.png' %}" alt="">
+									<img src="{% static 'img/brands/logo9' %}" alt="">
 								</div>
 							</div>
 						</div>
@@ -173,7 +173,7 @@
 				<div class="offset-lg-2 col-lg-4 col-md-6">
 					<div class="client-info">
 						<div class="d-flex mb-50">
-							<span class="lage">2</span>
+							<span class="lage">0</span>
 							<span class="smll">Anos de experiência com python e django</span>
 						</div>
 						<div class="call-now d-flex">
@@ -198,9 +198,8 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>Depoimentos</h2>
-						<p>este espaço será para depoimentos <br>
-							 e agradecimentos de todos clientes</p>
+						<h2>Cursos</h2>
+						<p>este espaço será apresentando minhas habilidades adquiridas através de cursos</p>
 					</div>
 				</div>
 			</div>
@@ -209,12 +208,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t1.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/img' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
-									<p>agradecimento </p>
+        							<h4>Django</h4>
+									<p> Certificado Udemy - Djando do básico ao avançado </p>
         						</div>
         					</div>
         				</div>
@@ -222,12 +221,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t2.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
-									<p>agradecimento </p>
+        							<h4>Python</h4>
+									<p> Curso em vídeo - Python fundamentos </p>
         						</div>
         					</div>
         				</div>
@@ -235,12 +234,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t1.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/mysql.jpeg' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
-									<p>agradecimento</p>
+        							<h4>Banco de Dados</h4>
+									<p>Certificado Curso em Vídeo - MySQL</p>
         						</div>
         					</div>
         				</div>
@@ -248,12 +247,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t2.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
-									<p>agradecimento </p>
+        							<h4>Python</h4>
+									<p>Udemy - Python Tutorials for Beginners to Expert </p>
         						</div>
         					</div>
         				</div>
@@ -261,12 +260,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t1.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
-									<p>agradecimento </p>
+        							<h4>Scrum Foundation</h4>
+									<p>CertiProf - Professional  Certificate </p>
         						</div>
         					</div>
         				</div>
@@ -274,12 +273,12 @@
         			<div class="testi_item">
         				<div class="row">
         					<div class="col-lg-4">
-        						<img src="{% static 'img/testimonials/t2.jpg' %}" alt="">
+        						<img src="{% static 'img/cert/' %}" alt="">
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
-									<p>agradecimento </p>
+        							<h4>Django Rest</h4>
+									<p>Udemy - Criando poderosas API's RESTful com Django Rest Framework</p>
         						</div>
         					</div>
         				</div>
@@ -327,13 +326,11 @@
 							<a href="#">
 								<img src="{% static 'img/logo.png' %}" alt="">
 							</a>
-							<h4>Me siga nas redes sociais</h4>
+							<h4>Me siga</h4>
 						</div>
 						<div class="footer_social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="#"><i class="fa fa-github"></i></a>
+							<a href="#"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
