--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
 	</section>
 	<!--================ End Home Banner Area =================-->
 
-	<!--================ Start About Us Area =================-->
+	<!--================ Start About Us Area =================
 	<section class="about_area section_gap">
 		<div class="container">
 			<div class="row justify-content-start align-items-center">
@@ -107,9 +107,9 @@
 			</div>
 		</div>
 	</section>
-	<!--================ End About Us Area =================-->
+	================ End About Us Area =================
 
-	<!--================ Srart Brand Area =================-->
+	================ Srart Brand Area =================
 	<section class="brand_area section_gap_bottom">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -200,9 +200,9 @@
 			</div>
 		</div>
 	</section>
-	<!--================ End Brand Area =================-->
+	================ End Brand Area =================
 
-	<!--================ Start Features Area =================-->
+	================ Start Features Area =================
 	<section class="features_area">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -429,10 +429,10 @@
 				</div>
 			</div>
 		</div>
-	</section>-->
-	<!--================End Portfolio Area =================-->
+	</section>
+	================End Portfolio Area =================
 
-	<!--================ Start Testimonial Area =================-->
+	================ Start Testimonial Area =================
 	<div class="testimonial_area section_gap_bottom">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -527,7 +527,7 @@
 			</div>
 		</div>
 	</div>
-	<!--================ End Testimonial Area =================-->
+	================ End Testimonial Area =================-->
 
 	<!--================ Start Newsletter Area =================-->
 	<!-- <section class="newsletter_area">
@@ -566,13 +566,13 @@
 							<a href="#">
 								<img src="{% static 'img/logo.png' %}" alt="">
 							</a>
-							<h4>Me siga nas redes sociais</h4>
+							<h4>Me siga</h4>
 						</div>
 						<div class="footer_social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+
+							<a href="https://github.com/allansmiff" target="_blank"><i class="fa fa-github"></i> </a>
+							<a href="https://www.linkedin.com/in/allan-santos0603/ "target="_blank"><i class="fa fa-linkedin"></i></a>
+
 						</div>
 					</div>
 				</div>
