--- a/templates/contact.html
+++ b/templates/contact.html
@@ -73,76 +73,74 @@
     <!--================ End Banner Area =================-->
     
     <!--================Contact Area =================-->
-    <section class="contact_area section_gap">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="contact_info">
-                        <div class="info_item">
-                            <i class="lnr lnr-home"></i>
-                            <h6>Distrito Federal, Brasil</h6>
-                            <p>Brasília</p>
-                        </div>
-                        <div class="info_item">
-                            <i class="lnr lnr-phone-handset"></i>
-                            <h6><a href="#">(61) ****4857</a></h6>
-                            <p>Seg à Sex 9:00 às 19:00 pm</p>
-                        </div>
-                        <div class="info_item">
-                            <i class="lnr lnr-envelope"></i>
-                            <h6><a href="#">allandifere@gmail.com</a></h6>
-                            <p>Envie-nos sua pergunta!</p>
-                        </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-3">
+				<div class="contact_info">
+					<div class="info_item">
+						<i class="lnr lnr-home"></i>
+						<h6>Distrito Federal, Brasil</h6>
+						<p>Brasília</p>
+					</div>
+					<div class="info_item">
+						<i class="lnr lnr-phone-handset"></i>
+						<h6><a href="#">(61) ****4857</a></h6>
+						<p>Seg à Sex 9:00 às 19:00 pm</p>
+					</div>
+					<div class="info_item">
+						<i class="lnr lnr-envelope"></i>
+						<h6><a href="#">allandifere@gmail.com</a></h6>
+						<p>Envie-nos sua pergunta!</p>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				{% bootstrap_messages %}
+				<form action="{% url 'portapp:contact' %}" method="post" class="form" id="form1" autocomplete="off">
+					{% csrf_token %}
+					{% bootstrap_form form %}
+					{% buttons %}
+					<button type="submit" class="btn-primary">Enviar</button>
+					{% endbuttons %}
+				</form>
+			</div>
+			<!--
+            <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Seu nome">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Seu e-mail">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto">
                     </div>
                 </div>
-                <div class="container">
-					{% bootstrap_messages %}
-					<form action="{% url 'portapp:contact' %}" method="post" class="form" id="form1" autocomplete="off">
-						{% csrf_token %}
-						{% bootstrap_form form %}
-						{% buttons %}
-							<button type="submit" class="btn-primary">Enviar</button>
-						{% endbuttons %}
-       				 </form>
-				</div>
-					<!--
-                    <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Seu nome">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Seu e-mail">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" id="message" rows="1" placeholder="Sua mensagem"></textarea>
-                            </div>
-                        </div>
-                        <div class="col-md-12 text-right">
-                            <button type="submit" value="submit" class="primary_btn">
-                                <span>Enviar</span>
-                            </button>
-                        </div>
-                    </form>
-                    -->
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <textarea class="form-control" name="message" id="message" rows="1" placeholder="Sua mensagem"></textarea>
+                    </div>
                 </div>
-            </div>
-            <div id="mapBox" class="mapBox" 
-                data-lat="40.701083" 
-                data-lon="-74.1522848" 
-                data-zoom="13" 
-                data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
-                data-mlat="40.701083"
-                data-mlon="-74.1522848">
-            </div>
+                <div class="col-md-12 text-right">
+                    <button type="submit" value="submit" class="primary_btn">
+                        <span>Enviar</span>
+                    </button>
+                </div>
+            </form>
+
         </div>
-    </section>
-    <!--================Contact Area =================-->
+    </div>
+    <div id="mapBox" class="mapBox"
+        data-lat="40.701083"
+        data-lon="-74.1522848"
+        data-zoom="13"
+        data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
+        data-mlat="40.701083"
+        data-mlon="-74.1522848">
+    </div>-->
+		</div>
+		<!--================Contact Area =================-->
         
         <!--================Footer Area =================-->
 	<footer class="footer_area">
