--- a/templates/services.html
+++ b/templates/services.html
@@ -115,7 +115,7 @@
 	</section>
     <!--================ End Features Area =================-->
 
-	<!--================ Start Testimonial Area =================-->
+	<!--================ Start Testimonial Area =================
 	<div class="testimonial_area section_gap_bottom">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -210,7 +210,7 @@
         		</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
     <!--================ End Testimonial Area =================-->
     
     <!--================ Start Newsletter Area =================-->
